--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -26,8 +26,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: solid;
-  border-color: black;
+  border-radius: 10%;
 }
 
 #modal-content label {
