--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -26,7 +26,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-radius: 10%;
+  border-radius: 15px;
+  box-shadow: 10px 5px 5px gray;
 }
 
 #modal-content label {
