--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -27,7 +27,7 @@
   flex-direction: column;
   align-items: center;
   border-radius: 15px;
-  box-shadow: 10px 5px 5px gray;
+  box-shadow: 0px 0px 20px 20px white;
 }
 
 #modal-content label {
