--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -1,4 +1,5 @@
 .profile-dropdown {
+  padding: 10px;
   size: 40px;
   position: absolute;
 }
@@ -11,7 +12,7 @@
   background-color: #635c5c;
   padding: 10px 0;
   display: flex;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
   height: 60px;
 }
@@ -21,7 +22,7 @@
   margin: 0;
   padding: 0;
   display: flex;
-  align-items: center;
+  align-items: left;
 }
 
 .nav-item {
@@ -49,6 +50,11 @@
   font-size: 20px;
   color: black;
   cursor: pointer;
-  text-align: center;
+  text-align: left;
   width: 50px;
+}
+
+.icon {
+  color: rgb(116, 227, 246);
+
 }
